--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "nodemon src/server/main.ts -w src/server",
+    "dev": "nodemon --watch  src/server/main.ts -w src/server",
     "start": "NODE_ENV=production ts-node src/server/main.ts",
     "build": "vite build"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "react-dom": "^18.2.0",
+    "mongoose": "^7.5.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite-express": "*"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
