--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
     "nodemon": "^2.0.20",
+    "react-router-dom": "^6.16.0",
     "vite": "^4.0.4"
   }
 }
