--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
